src/objects/Committee__c.object
<CustomObject>
    <fields>
        <fullName>Board_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charter_Status__c</fullName>
        <label>Charter Status</label>
        <picklist>
            <picklistValues>
                <fullName>In process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charter__c</fullName>
        <label>Charter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Committee</label>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>